// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> UI Snapshot renders with label and labelFor 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 22px;
}

.emotion-0 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
}

.emotion-6 {
  position: relative;
}

.emotion-6 svg.radiance-field-input-icon {
  opacity: 0;
  position: absolute;
  top: 20px;
  right: 1rem;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
}

.emotion-2 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #ffffff;
  border: 1px solid #ededf0;
  border-radius: 0.25rem;
  color: #524D6E;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
  margin-bottom: 2px;
  padding: 13px 2rem 13px 1rem;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
  border-color: #332e54;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

.emotion-2:active ~ .ez9grqt0,
.emotion-2:focus ~ .ez9grqt0 {
  max-height: 24px;
  opacity: 1;
  margin: 0.125rem 0 0 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #c3c0cd;
}

.emotion-2::-moz-placeholder {
  color: #c3c0cd;
}

.emotion-2:-ms-input-placeholder {
  color: #c3c0cd;
}

.emotion-2::placeholder {
  color: #c3c0cd;
}

.emotion-2[disabled] {
  background-color: #ededf0;
  color: #c3c0cd;
  cursor: not-allowed;
  border: 1px solid #ededf0;
  box-shadow: none;
}

.emotion-4 {
  list-style-type: none;
  margin: 0;
}

<div
  className="emotion-8 emotion-9"
>
  <label
    className="emotion-0 emotion-1"
    disabled={false}
    htmlFor="for-input-id"
  >
    Test Label
  </label>
  <div
    className="emotion-6 emotion-7"
  >
    <svg
      className="radiance-field-input-icon"
      fill="#BD200F"
    />
    <input
      className="emotion-2 emotion-3"
      disabled={false}
    />
    <ul
      className="emotion-4 emotion-5"
    />
  </div>
</div>
`;

exports[`<Field /> UI Snapshot renders with label prop 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 22px;
}

.emotion-0 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
}

.emotion-6 {
  position: relative;
}

.emotion-6 svg.radiance-field-input-icon {
  opacity: 0;
  position: absolute;
  top: 20px;
  right: 1rem;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
}

.emotion-2 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #ffffff;
  border: 1px solid #ededf0;
  border-radius: 0.25rem;
  color: #524D6E;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
  margin-bottom: 2px;
  padding: 13px 2rem 13px 1rem;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
  border-color: #332e54;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

.emotion-2:active ~ .ez9grqt0,
.emotion-2:focus ~ .ez9grqt0 {
  max-height: 24px;
  opacity: 1;
  margin: 0.125rem 0 0 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #c3c0cd;
}

.emotion-2::-moz-placeholder {
  color: #c3c0cd;
}

.emotion-2:-ms-input-placeholder {
  color: #c3c0cd;
}

.emotion-2::placeholder {
  color: #c3c0cd;
}

.emotion-2[disabled] {
  background-color: #ededf0;
  color: #c3c0cd;
  cursor: not-allowed;
  border: 1px solid #ededf0;
  box-shadow: none;
}

.emotion-4 {
  list-style-type: none;
  margin: 0;
}

<div
  className="emotion-8 emotion-9"
>
  <label
    className="emotion-0 emotion-1"
    disabled={false}
    htmlFor="Test Label"
  >
    Test Label
  </label>
  <div
    className="emotion-6 emotion-7"
  >
    <svg
      className="radiance-field-input-icon"
      fill="#BD200F"
    />
    <input
      className="emotion-2 emotion-3"
      disabled={false}
    />
    <ul
      className="emotion-4 emotion-5"
    />
  </div>
</div>
`;
